--- a/dashboard/templates/dashboard_ordens.html
+++ b/dashboard/templates/dashboard_ordens.html
@@ -5,22 +5,23 @@
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 Dashboard
 
-<div style="display: flex; flex-direction: row; justify-content: center; margin-bottom: -15px;">
+<!-- <div style="display: flex; flex-direction: row; justify-content: center; margin-bottom: -15px;">
   <form id="filtro-fechas" >
     <label>Desde: <input type="date" id="desde" name="desde"></label> 
     <label>Hasta: <input type="date" id="hasta" name="hasta"></label>
     <button type="submit">Filtrar</button>
   </form>
 
+</div> -->
+
+  
+<div id="chart" class="chart">
+
 </div>
 
-  <div id="chart" class="chart">
-
-  </div>
 
 
-
-<div id="chart2" class="chart2">
+<!-- <div id="chart2" class="chart2"> -->
 
 </div>
 <script src="{% static 'js/main.js' %}" defer></script>
