--- a/cart/templates/update_quantity.html
+++ b/cart/templates/update_quantity.html
@@ -22,7 +22,7 @@
     document.addEventListener('DOMContentLoaded', function () {
         let allSpinners = document.querySelectorAll('.loading-spinner');
         allSpinners.forEach(function(spinner) {
-            spinner.style.display = 'none';  // Asegúrate de que todos los spinners estén ocultos al cargar la página.
+            spinner.style.display = 'none'; 
         });
     });
 
