--- a/report/templates/list_report_ordenes/reporte_orden_filtrados.html
+++ b/report/templates/list_report_ordenes/reporte_orden_filtrados.html
@@ -1,5 +1,5 @@
 {% extends 'base_admin.html' %}
-
+{% load precios_tag %}
 
 {% block content_admin %}
 
@@ -36,7 +36,7 @@ TOTAL ORDENES: {{ordens | length}}
             <tr>
                 <td>#{{ordenes.num_orden}}</td>
                 <td>{{ordenes.user.first_name | title}} {{ordenes.user.last_name | title}}</td>
-                <td>{{ordenes.total}}</td>
+                <td>{{ordenes.total | format_price }}</td>
                 <td>{{ordenes.get_status_display}}</td>
                 {% if ordenes.status == 'CREATED' %}
                     <td>{{ordenes.create_at |date:"d/m/Y"}}</td>
