--- a/templates/index_admin.html
+++ b/templates/index_admin.html
@@ -3,24 +3,6 @@
 
 
 {% block content_admin %}
-<!-- <h1 style="background: lightcoral;">
-    Administracion
-</h1>
-<div style="display: flex; flex-direction: row;">
-    <div style="background: lightblue; display: flex; flex-direction: column; align-items: start;">
-        <h3><a href="{% url 'list_ordenes_admin' %}"></a>Gestion pedidos</h3>
-        <h3><a href="{% url 'list_product_admin' %}">Gestion productos</a></h3>
-        <h3><a href="{% url 'dashboard' %}">Dashboard</a></h3>
-        <h3>Reporte de ventas</h3>
-    </div>
-</div> -->
-
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inicio Administrador</title>
   <style>
     * {
       box-sizing: border-box;
@@ -128,9 +110,17 @@
       <p>Visualiza reportes de ventas diarios, semanales y mensuales.</p>
       <a href="{% url 'orden_list_report' %}" class="btn btn-primary">Ir a reporte de ventas</a>
     </div>
+
+
+    
+    <div class="card reportes">
+      <div class="card-icon">📊</div>
+      <h2>Dashboard</h2>
+      <p>Visualiza dashboard de ventas.</p>
+      <a href="{% url 'dashboard_admin' %}" class="btn btn-primary">Ir a dashboard de ventas</a>
+    </div>
+
   </section>
 
-</body>
-</html>
 
 {% endblock %}
