--- a/adminPanel/templates/gestion_pedidos/list_ordenes.html
+++ b/adminPanel/templates/gestion_pedidos/list_ordenes.html
@@ -8,7 +8,7 @@ TOTAL ORDENES: {{ordens | length}}
 <table class="table">
     <thead>
         {% for estado, cantidad in resumen_estados.items %}
-            {{ estado }}: {{ cantidad }}
+            {{ estado }}: ({{ cantidad }})
         {% endfor %}
         <tr>
             <th>{% include 'gestion_pedidos/filtros/filtro_numero_pedido.html' %}</th>
