--- a/products/static/css/list_products.css
+++ b/products/static/css/list_products.css
@@ -9,7 +9,7 @@
     justify-content: center;
     width: 100%;
     max-width: 800px;
-    margin:auto;
+    margin: auto;
 }
 
 .search-bar input {
@@ -29,9 +29,9 @@
     font-weight: bold;
     cursor: pointer;
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
-    min-width: 60px; 
+    min-width: 60px;
 }
 
 
@@ -41,6 +41,7 @@
     margin: 2rem 0;
     font-size: 1.8rem;
 }
+
 .product-container {
     display: flex;
     justify-content: center;
@@ -53,10 +54,11 @@
     border-radius: 1rem;
     overflow: hidden;
     transition: transform 0.3s, box-shadow 0.3s;
-    width: 280px;  
+    width: 280px;
     margin: 10px;
     margin-bottom: 1rem;
 }
+
 .product-card {
     background-color: #2d2b42;
     border-radius: 1rem;
@@ -68,6 +70,7 @@
     transform: translateY(-5px);
     box-shadow: 0 10px 20px rgba(11, 235, 200, 0.2);
 }
+
 .product-image {
     width: 100%;
     height: 160px;
@@ -76,10 +79,12 @@
     justify-content: center;
     align-items: center;
 }
+
 .product-info {
     padding: 1rem;
     color: white;
 }
+
 .product-info a {
     text-decoration: none;
     color: white !important;
@@ -121,7 +126,8 @@
     transition: background-color 0.3s;
     margin-bottom: 6px;
 }
-.add-to-cart-a{
+
+.add-to-cart-a {
     display: flex;
     background-color: #0bebc8;
     border: none;
@@ -135,7 +141,7 @@
     margin-bottom: 5px;
 }
 
-.add-to-cart-a a{
+.add-to-cart-a a {
     color: black !important;
 }
 
@@ -145,7 +151,7 @@
 
 
 
-.container-main{
+.container-main {
     display: flex;
     max-width: 1300px;
     margin: 0 auto;
@@ -153,7 +159,7 @@
 }
 
 /*Filtros*/
-.filter-title{
+.filter-title {
     font-size: 1.2rem;
     margin-bottom: 1.5rem;
     color: #0bebc8;
@@ -166,12 +172,13 @@
     padding: 1.5rem;
     margin-right: 2rem;
 }
+
 .filter-section {
     margin-bottom: 1.5rem;
     color: white;
 }
 
-.orderby button{
+.orderby button {
     margin: auto;
     display: flex;
     justify-content: center;
@@ -229,19 +236,19 @@
 
 
 .filter-section select {
-  width: 100%;
-  padding: 10px 15px;
-  margin-right: 10px;
-  border-radius: 8px;
-  border: none;
-  background-color: #2c2f48;
-  color: white;
-  font-weight: 600;
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  cursor: pointer;
-  position: relative;
+    width: 100%;
+    padding: 10px 15px;
+    margin-right: 10px;
+    border-radius: 8px;
+    border: none;
+    background-color: #2c2f48;
+    color: white;
+    font-weight: 600;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    cursor: pointer;
+    position: relative;
 }
 
 
@@ -254,5 +261,96 @@
 
 
 select option {
-  background-color: #2c2f48;
+    background-color: #2c2f48;
+}
+
+/* filtro price */
+:root {
+  --blue-color: #357ded;
+  --gray-color: #77889926;
+}
+
+/* range slider styles */
+
+.range-slider {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 20px;
+  padding-block: 20px;
+  color: white;
+}
+
+
+.range-slider > input {
+  border: none;
+  outline: none;
+  background: var(--gray-color);
+  font-size: 16px;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  min-width: 64px;
+  max-width: 100px;
+  color: white;
+  cursor: default !important;
+}
+
+.range {
+  width: 100%;
+  display: grid;
+  position: relative;
+  z-index: 5;
+  cursor: default !important;
+}
+
+.range input {
+  grid-row: 2;
+  grid-column: 1;
+  pointer-events: none;
+  appearance: none;
+  background: transparent;
+}
+
+.range input::-webkit-slider-thumb {
+  pointer-events: auto;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background:  #0bebc8;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider {
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  background: var(--gray-color);
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 5px;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.progress {
+  position: absolute;
+  height: 100%;
+  background: #0bebc8;
+  cursor: default !important;
+}
+
+.price-labels {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0.5rem;
+  color: #ccc;
+  font-weight: 600;
+  font-size: 1rem;
+  width: 100%;
+}
+.price-labels label {
+  cursor: default;
 }
