--- a/products/templates/list_products.html
+++ b/products/templates/list_products.html
@@ -5,90 +5,151 @@
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/list_products.css' %}">
 
+<style>
+
+</style>
 <div class="search-container">
     <div class="search-bar">
         {% include 'search.html' %}
     </div>
 </div>
 
-{% if query %}
 
-<div class="container-main" style="display: flex; flex-direction: row;">
-    <div class="filters">
-        <h4 class="filter-title">Filtros</h4>
-        <hr style=" color: white;">
-        <div class="filter-section">
-            <h6>Filtro por categoria</h6>
-            {% for categoys in categorias %}
-            <div class="filter-option">
-                <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id %}" class="filter-label">
-                {{categoys.name}}  <span class="filter-badge">{{categoys.count }}</span>
-                </a> 
-            </div>
-            
-            {% endfor %}
+{% if query  %}
+    {% if has_results %}
+        <h2 style="color: white; text-align: center;">Resultado de búsqueda  para: {{query | title }}</h2>
+        <div class="container-main" style="display: flex; flex-direction: row;">
+            <div class="filters">
+                <h4 class="filter-title">Filtros</h4>
+                <hr style=" color: white;">
+                <div class="filter-section">
+                    <h6>Filtro por categoria</h6>
+                    {% for categoys in categorias %}
+                    <div class="filter-option">
+                        <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id %}" class="filter-label">
+                        {{categoys.name | title }}  <span class="filter-badge">{{categoys.count }}</span>
+                        </a> 
+                    </div>
+                    
+                    {% endfor %}
 
-            <h6>Filtro por marcas</h6>
-            {% for brand in marcas %}
-            <div class="filter-option">
-                <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}" class="filter-label">
-                {{brand.name}} <span class="filter-badge">{{brand.count  }}</span>
-                </a>
-            </div>
-
-            {% endfor %}
-        </div>
-
-        <div class="filter-section orderby">
-            <form method="get" action="{% url 'view_products' %}">
-                <div style="display: flex; justify-content: center; align-items: center;">
-                    <select name="price_order" id="price_order" style="margin-bottom: 15px;">
-                        <option value="ordenpor"disabled  style="color: #0BEAD0" selected>Ordenar por</option>
-                        <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>
-                            Recomendados</option>
-                        <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor
-                        </option>
-                        <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a
-                            menor</option>
-                    </select>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-filter-icon lucide-list-filter"><path d="M3 6h18"/><path d="M7 12h10"/><path d="M10 18h4"/></svg>
+                    <h6>Filtro por marcas</h6>
+                    {% for brand in marcas %}
+                    <div class="filter-option">
+                        <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}" class="filter-label">
+                        {{brand.name | title }} <span class="filter-badge">{{brand.count  }}</span>
+                        </a>
+                    </div>
+                    {% endfor %}
                 </div>
-                <button type="submit">Filtrar</button>
-            </form>
-        </div>
 
-            
-            <!-- <h6>Filtro por precio</h6>
-            <label for="precio">Selecciona un precio:</label>
-            <input type="range" id="precio" name="precio" min="1000" max="100000" step="300" value="50000">
-            <span id="precio-valor">$50.000</span> -->
-    </div>
+                <div style="margin: 5px 0;">
+                    <a href="{% url 'view_products' %}" class="filter-label">Ver todos los productos</a>
+                </div>
 
-    <div class="product-container">
-        {% for product in product_list %}
-        <div class="product-card">
-            <div class="product-image">
-                {% if product.main_image %}
-                <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;">
-                {% else %}
-                <p>No image available</p>
-                {% endif %}
+                <div class="filter-section orderby">
+                    <form method="get" action="{% url 'search_product' %}">
+                        <input type="hidden" name="searchQ" value="{{ query }}">
+                        <select name="price_order" id="price_order" style="margin-bottom: 15px;">
+                            <option value="recomendado" disabled {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Ordenar por</option>
+                            <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Recomendados</option>
+                            <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor</option>
+                            <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a menor</option>
+                        </select>
+                        <button type="submit">Filtrar</button>
+                    </form>
+                </div>
+
+                    
+                <div class="filter-section">
+                    <div class="range-slider">
+                        <input type="number" class="min-price" value="1" min="1" max="{{ max_price }}" />
+                        <input type="number" class="max-price" value="{{ max_price }}" min="1" max="{{ max_price }}" />
+                        <div class="range">
+                            <input type="range" class="min-input" value="1" min="1" max="{{ max_price }}" />
+                            <input type="range" class="max-input" value="{{ max_price }}" min="1" max="{{ max_price }}" />
+
+                            <div class="slider">
+                                <div class="progress"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="product-info">
-                <div class="product-brand">{{ product.category }}</div>
-                <div class="product-brand">{{ product.brand }}</div>
-                <div class="product-name">{{ product.name }}</div>
-                <div class="product-price">{{ product.price | format_price }}</div>
-                <!-- <button class="add-to-cart">Agregar al carrito</button> -->
-                <button class="add-to-cart-a"><a href="{% url 'detail_product' product.slug %}">Ir al
-                        producto</a></button>
+            <div style="display: flex; flex-direction: column; justify-content: space-between;"></div>
+                <div class="product-container">
+                    {% for product in product_list %}
+                    <div class="product-card">
+                        <div class="product-image">
+                            {% if product.main_image %}
+                            <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;">
+                            {% else %}
+                            <p>No image available</p>
+                            {% endif %}
+                        </div>
+                        <div class="product-info">
+                            <div class="product-brand">{{ product.category | title }}</div>
+                            <div class="product-brand">{{ product.brand | title }}</div>
+                            <div class="product-name">{{ product.name | title }}</div>
+                            <div class="product-price">{{ product.price | format_price }}</div>
+                            <!-- <button class="add-to-cart">Agregar al carrito</button> -->
+                            <button class="add-to-cart-a"><a href="{% url 'detail_product' product.slug %}">Ir al
+                                    producto</a></button>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% include 'paginacion_products.html' %}
             </div>
         </div>
-        {% endfor %}
+       {% include 'paginacion_products.html' %}
+    {% else %}
+        <h2 style="color: white; text-align: center;">No hay resultados para: {{query | title }}</h2>
+        <div class="container-main" style="display: flex; flex-direction: row;">
+            <div class="filters">
+                <h4 class="filter-title">Filtros</h4>
+                <hr style=" color: white;">
+                <div class="filter-section">
+                    <h6>Filtro por categoria</h6>
+                    {% for categoys in categorias %}
+                    <div class="filter-option">
+                        <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id %}" class="filter-label">
+                        {{categoys.name | title }}  <span class="filter-badge">{{categoys.count }}</span>
+                        </a> 
+                    </div>
+                    
+                    {% endfor %}
 
-    </div>
-</div>
-</div>
+                    <h6>Filtro por marcas</h6>
+                    {% for brand in marcas %}
+                    <div class="filter-option">
+                        <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}" class="filter-label">
+                        {{brand.name | title }} <span class="filter-badge">{{brand.count  }}</span>
+                        </a>
+                    </div>
+                    {% endfor %}
+                </div>
+
+                <div style="margin: 5px 0;">
+                    <a href="{% url 'view_products' %}" class="filter-label">Ver todos los productos</a>
+                </div>
+
+                <div class="filter-section orderby">
+                    <form method="get" action="{% url 'view_products' %}">
+                        <div style="display: flex; justify-content: center; align-items: center;">
+                            <select name="price_order" id="price_order" style="margin-bottom: 15px;">
+                                <option value="ordenpor"disabled  style="color: #0BEAD0" selected>Ordenar por</option>
+                                <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Recomendados</option>
+                                <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor</option>
+                                <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a menor</option>
+                            </select>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-filter-icon lucide-list-filter"><path d="M3 6h18"/><path d="M7 12h10"/><path d="M10 18h4"/></svg>
+                        </div>
+                        <button type="submit">Filtrar</button>
+                    </form>
+                </div>
+            </div>
+    {% endif %}
 {% else %}
 
 <div class="container-main" style="display: flex; flex-direction: row;">
@@ -100,7 +161,7 @@
             {% for categoys in categorias %}
             <div class="filter-option">
                 <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id %}" class="filter-label">
-                {{categoys.name}}  <span class="filter-badge">{{categoys.count  }}</span>
+                {{categoys.name | title }}  <span class="filter-badge">{{categoys.count  }}</span>
                 </a> 
             </div>
             
@@ -110,7 +171,7 @@
             {% for brand in marcas %}
             <div class="filter-option">
                 <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}" class="filter-label">
-                {{brand.name}} <span class="filter-badge">{{brand.count  }}</span>
+                {{brand.name | title }} <span class="filter-badge">{{brand.count  }}</span>
                 </a>
             </div>
 
@@ -135,49 +196,58 @@
             </form>
         </div>
 
-            
-            <!-- <h6>Filtro por precio</h6>
-            <label for="precio">Selecciona un precio:</label>
-            <input type="range" id="precio" name="precio" min="1000" max="100000" step="300" value="50000">
-            <span id="precio-valor">$50.000</span> -->
-    </div>
+        <div class="filter-section">
+            <div class="range-slider">
+                <input type="number" class="min-price" value="1" min="1" max="{{ max_price }}" />
+                <input type="number" class="max-price" value="{{ max_price }}" min="1" max="{{ max_price }}" />
+                <div class="range">
+                    <input type="range" class="min-input" value="1" min="1" max="{{ max_price }}" />
+                    <input type="range" class="max-input" value="{{ max_price }}" min="1" max="{{ max_price }}" />
 
-    <div class="product-container">
-        {% for product in product_list %}
-        <div class="product-card">
-            <div class="product-image">
-                {% if product.main_image %}
-                <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;">
-                {% else %}
-                <p>No image available</p>
-                {% endif %}
-            </div>
-            <div class="product-info">
-                <div class="product-brand">{{ product.category }}</div>
-                <div class="product-brand">{{ product.brand }}</div>
-                <div class="product-name">{{ product.name }}</div>
-                <div class="product-price">{{ product.price | format_price }}</div>
-                <!-- <button class="add-to-cart">Agregar al carrito</button> -->
-                <button class="add-to-cart-a"><a href="{% url 'detail_product' product.slug %}">Ir al
-                        producto</a></button>
+                    <div class="slider">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+                <div class="price-labels">
+                    <label class="min-label" for="min-input">$1</label>
+                    <label class="max-label" for="max-input">${{ max_price }}</label>
+                </div>
             </div>
         </div>
-        {% endfor %}
 
     </div>
+    <div style="display: flex; flex-direction: column; justify-content: space-between;">
+        <div class="product-container">
+            {% for product in product_list %}
+            <div class="product-card">
+                <div class="product-image">
+                    {% if product.main_image %}
+                    <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;">
+                    {% else %}
+                    <p>No image available</p>
+                    {% endif %}
+                </div>
+                <div class="product-info">
+                    <div class="product-brand">{{ product.category | title}}</div>
+                    <div class="product-brand">{{ product.brand | title }}</div>
+                    <div class="product-name">{{ product.name | title }}</div>
+                    <div class="product-price">{{ product.price | format_price }}</div>
+                    <!-- <button class="add-to-cart">Agregar al carrito</button> -->
+                    <button class="add-to-cart-a"><a href="{% url 'detail_product' product.slug %}">Ir al
+                            producto</a></button>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        {% include 'paginacion_products.html' %}
+    </div>
+    
+    
 </div>
+
+
+
 {% endif %}
 
-<!-- <script>
-    const slider = document.getElementById("precio");
-    const output = document.getElementById("precio-valor");
-
-    // Mostrar el valor inicial
-    output.textContent = `$${parseInt(slider.value).toLocaleString()}`;
-
-    // Actualizar el valor cuando se mueve el slider
-    slider.addEventListener("input", function () {
-        output.textContent = `$${parseInt(this.value).toLocaleString()}`;
-    });
-</script> -->
+<script src="{% static 'js/list_product.js' %}"></script>
 {% endblock %}
